# nvidia-deepstream-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
nvds/: Cargo.toml
nvds-examples/: Cargo.toml  LICENSE  README.md
nvds-sys/: README.md
nvds/src/: helper.rs  infer.rs  logger.rs  meta.rs  obj_encode.rs  surface.rs  surface_transform.rs  yaml.rs
nvds/src/meta/: audio.rs  latency.rs  osd.rs  schema.rs  tracker.rs
nvidia-deepstream/: Cargo.toml  build.rs
nvidia-deepstream-examples/: Cargo.toml  build.rs
nvidia-deepstream-sys/: Cargo.toml  README.md  build.rs  wrapper.h
nvidia-deepstream/examples/: test1.rs  test2.rs  user_metadata_test.rs
nvidia-deepstream/src/: bounding_box.rs  buffer.rs  element.rs  helper.rs  infer.rs  lib.rs  logger.rs  mem.rs  meta.rs  obj_encode.rs  osd.rs  surface.rs  surface_transform.rs  utils.rs  yaml.rs
nvidia-deepstream/src/meta/: audio.rs  dewarper.rs  latency.rs  optical_flow.rs  osd.rs  schema.rs  tracker.rs
