[package]
name = "nvds-examples"
version = "0.1.0"
edition = "2021"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

gstreamer = "0.19.4"
nvidia-deepstream = { version = "0.1.0", path = "../nvds", features = ["all"] }
chrono = "0.4.23"
