[package]
name = "nvidia-deepstream"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]

default = []
meta = []
surface = []
yaml = []


[dependencies]

gstreamer = "0.19.4"
nvidia-deepstream-sys = { version = "0.1.0", path = "../nvidia-deepstream-sys" }