[package]
name = "nvidia-deepstream"
version = "0.1.0"
authors = ["Yasuhiro Taniuchi"]
license = "MIT"
description = "NVIDIA DeepStream SDK for Rust"
homepage = "https://github.com/aosoft/nvidia-deepstream-rs"
repository = "https://github.com/aosoft/nvidia-deepstream-rs"
readme = "../README.md"
categories = ["api-bindings"]
edition = "2021"
include = [
    "**/*.rs",
    "Cargo.toml",
    "../LICENSE"
]

[features]

default = []
all = ["helper", "infer", "logger", "meta", "obj_encode", "surface", "surface_transform", "yaml", "utils"]
helper = []
infer = []
logger = []
meta = []
obj_encode = []
surface = []
surface_transform = ["surface"]
utils = []
yaml = []


[dependencies]

gstreamer = "0.19.4"
nvidia-deepstream-sys = { version = "0.1.0", path = "../nvidia-deepstream-sys" }